<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigationcomponents_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/suggestionsContainer"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:translationZ="2dp"
        app:layout_constraintStart_toStartOf="@id/searchBar"
        app:layout_constraintEnd_toEndOf="@id/searchBar"
        app:layout_constraintTop_toTopOf="@id/searchBar">

        <FrameLayout
            android:id="@+id/suggestionsFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_suggestions">

            <com.example.mapboxtest.NonScrollableRecyclerView
                android:id="@+id/suggestionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:translationZ="2dp"
        app:cardBackgroundColor="#8E8E8E"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:id="@+id/searchFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="12dp"
                android:layout_gravity="center_vertical|start"
                android:contentDescription="@string/ic_search"
                android:src="@drawable/ic_search"/>

            <ImageView
                android:id="@+id/deleteIcon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginEnd="12dp"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@string/ic_delete"
                android:src="@drawable/ic_delete"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/search"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSelectHandle="@drawable/transparent_drawable"
                android:textSelectHandleLeft="@drawable/transparent_drawable"
                android:textSelectHandleRight="@drawable/transparent_drawable"
                android:textSize="22sp"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/homeButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:cardBackgroundColor="#244876"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/homeButtonFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/homeButtonIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ic_home"
                android:src="@drawable/ic_home"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/gasButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        app:cardBackgroundColor="#244876"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton"
        app:layout_constraintBottom_toTopOf="@+id/foodButton">

        <FrameLayout
            android:id="@+id/gasButtonFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/gasButtonIcon"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ic_gas"
                android:src="@drawable/ic_gaswhite"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/foodButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        app:cardBackgroundColor="#244876"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/historyContainer">

        <FrameLayout
            android:id="@+id/foodButtonFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/foodButtonIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ic_food"
                android:src="@drawable/ic_foodwhite"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/historyContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:elevation="8dp"
        android:background="@drawable/elevated_background"
        app:layout_constraintStart_toEndOf="@id/homeButton"
        app:layout_constraintTop_toTopOf="@id/gasButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/tabButton_recent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tab_selected"
        app:layout_constraintStart_toStartOf="@+id/historyContainer"
        app:layout_constraintEnd_toStartOf="@+id/tabButton_contacts"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintBottom_toTopOf="@+id/historyContainer">

        <ImageView
            android:id="@+id/ic_recent"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/ic_recent"
            android:src="@drawable/ic_recent"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/tabButton_contacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tab_unselected"
        app:layout_constraintStart_toEndOf="@+id/tabButton_recent"
        app:layout_constraintEnd_toEndOf="@+id/historyContainer"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintBottom_toTopOf="@+id/historyContainer">

        <ImageView
            android:id="@+id/ic_contacts"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/ic_recent"
            android:src="@drawable/ic_contacts"/>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/maneuverView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:alpha="0"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="#244876"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tripInfoView">

        <com.mapbox.navigation.ui.components.maneuver.view.MapboxTurnIconManeuver
            android:id="@+id/turnIconManeuver"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/ic_maneuver"
            android:layout_gravity="start|top"/>

        <com.mapbox.navigation.ui.components.maneuver.view.MapboxStepDistance
            android:id="@+id/stepDistanceManeuver"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:contentDescription="@string/ic_maneuver"
            android:textColor="@android:color/white"
            android:textSize="34sp"/>

        <com.mapbox.navigation.ui.components.maneuver.view.MapboxPrimaryManeuver
            android:id="@+id/nextManeuver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/ic_maneuver"
            android:layout_gravity="start|top"
            android:gravity="start"
            android:textColor="@android:color/white"
            android:textSize="42sp"/>

        <LinearLayout
            android:id="@+id/laneGuidanceContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="150dp"
            android:layout_marginTop="100dp">
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tripInfoView"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:visibility="gone"
        android:alpha="0"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="24dp"
        app:cardBackgroundColor="#2A2A2A"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancelButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ProgressBar
                android:id="@+id/tripProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:progressDrawable="@drawable/custom_progress_bar"
                android:layout_marginTop="54dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/progressIcon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@string/ic_progress"
                android:src="@drawable/ic_progress"
                android:layout_marginStart="-10dp"
                app:layout_constraintTop_toTopOf="@+id/tripProgressBar"
                app:layout_constraintStart_toStartOf="@+id/tripProgressBar"
                app:layout_constraintBottom_toBottomOf="@+id/tripProgressBar"/>

            <TextView
                android:id="@+id/kmView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/null_string"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="0dp"
                app:layout_constraintBottom_toTopOf="@+id/tripProgressBar"
                app:layout_constraintStart_toStartOf="@+id/tripProgressBar"/>

            <TextView
                android:id="@+id/tripRemainingView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/null_string"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/tripProgressBar"
                app:layout_constraintStart_toEndOf="@+id/kmView"
                app:layout_constraintEnd_toStartOf="@+id/tripArrivalView"/>

            <TextView
                android:id="@+id/tripArrivalView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/null_string"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/tripProgressBar"
                app:layout_constraintEnd_toEndOf="@+id/tripProgressBar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cancelButton"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        android:alpha="0"
        app:cardBackgroundColor="#762424"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:id="@+id/cancelButtonFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/cancelButtonIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/ic_food"
                android:src="@drawable/ic_cancel"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
